--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
 div {
   /* Your code here! */
   width: 700px;
+  margin: auto;
 
 }
 
@@ -21,3 +22,11 @@ div {
 .perspective-questions {
   /* Your code here! */
 }
+
+/*Set the `<div>` elements:
+  - `margin` to `auto` (centers our element)
+  - `font-family` to `"Helvetica Neue"`
+  - `background` to `white`
+  - `padding` to `30px` (creates an invisible space around the element)
+- Set the element with the id of `#main-header` to a `font-size` of `22px`
+- Set the elements with the class of `.perspective-questions` to a `font-style` of `italic`
