--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ div {
   margin: auto;
   font-family: Helvetica Neue;
   background: white;
-  
+  padding: 30px;
 
 }
 
@@ -27,7 +27,6 @@ div {
 }
 
 /*Set the `<div>` elements:
-  - `background` to `white`
   - `padding` to `30px` (creates an invisible space around the element)
 - Set the element with the id of `#main-header` to a `font-size` of `22px`
 - Set the elements with the class of `.perspective-questions` to a `font-style` of `italic`
